GpgME 1.23.2 was released almost 11 months ago and it includes important fixes for building the Qt 6 bindings on some distributions, i.e. it's pretty much required for Qt 6 builds of Kleopatra anyway.
Description
Description
Revisions and Commits
Revisions and Commits
| rLIBKLEO Libkleo | |||
| rLIBKLEObf5bc77a1ad9 Remove compat code for very old gpgme versions | |||
| rLIBKLEOf8d62bedcdad Fix include of gpgme++ header | |||
| rLIBKLEO3dfe63dcd79c Fix include of gpgme++ header | |||
| rLIBKLEO692875f1a94a Remove compat code for very old gpgme versions | |||
| rLIBKLEO1897f314c3dc Require gpgme 1.23.2 | |||
| rLIBKLEOf80bca418fb3 Fix include of gpgme++ header | |||
| rLIBKLEO1af18f539eb1 Remove compat code for very old gpgme versions | |||
| rLIBKLEO5143cb141927 Require gpgme 1.23.2 | |||
| rKLEOPATRA Kleopatra | |||
| rKLEOPATRA9f0c222f79c7 Require gpgme 1.23.2 | |||
Related Objects
Related Objects