Require gpgme 1.23.2

GnuPG-bug-id: 7347